New version: Constraints v0.1.6
UUID: 30f324ab-b02d-43f0-b619-e131c61659f7
Repo: https://github.com/JuliaConstraints/Constraints.jl.git
Tree: 4e45b3a6c4c6973c8676c0d4be1530356954d8de

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/Constraints/Versions.toml
+++ b/C/Constraints/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "ace39e0ccdc86199cb0b6f3635dceec1b73bab4c"
 
 ["0.1.5"]
 git-tree-sha1 = "017c3e7edf590da69bfb0b5667c7f0f8cef6761e"
+
+["0.1.6"]
+git-tree-sha1 = "4e45b3a6c4c6973c8676c0d4be1530356954d8de"
