--- a/L/LocalSearchSolvers/Compat.toml
+++ b/L/LocalSearchSolvers/Compat.toml
@@ -18,10 +18,16 @@ Constraints = "0.1.3-0.1"
 CompositionalNetworks = "0.0.3"
 Constraints = "0.1.4-0.1"
 
-["0.1.5-0"]
+["0.1.5-0.1.6"]
 Dictionaries = "0.3.6-0.3"
 
-["0.1.6-0"]
+["0.1.6"]
 CompositionalNetworks = "0.1.2-0.1"
 ConstraintDomains = "0.1.1-0.1"
 Constraints = "0.1.5-0.1"
+
+["0.1.7-0"]
+CompositionalNetworks = "0.1.3-0.1"
+ConstraintDomains = "0.1.2-0.1"
+Constraints = "0.1.7-0.1"
+Dictionaries = "0.3"
