--- a/L/LocalSearchSolvers/Versions.toml
+++ b/L/LocalSearchSolvers/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "70d59b9ad0434d5db98753bb60656c4481039b4d"
 
 ["0.1.6"]
 git-tree-sha1 = "84daeef35ed7a137f3717e943c61e417043504d2"
+
+["0.1.7"]
+git-tree-sha1 = "41cfa445bd974f499f2ae33ac73f4a0aa972711f"
