--- a/H/Hamburg/Versions.toml
+++ b/H/Hamburg/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "e16d670e9c5dd34976969d0d01a358b4da1e8e1f"
 
 ["0.1.10"]
 git-tree-sha1 = "5703a80fc31e463592f98816de9b96b519baadb5"
+
+["0.1.11"]
+git-tree-sha1 = "5ded4570b6c4ccacd5af22d00b28aa14c9e4a38f"
