New version: SymbolicUtils v0.7.5
UUID: d1185830-fcd6-423d-90d6-eec64667417b
Repo: https://github.com/JuliaSymbolics/SymbolicUtils.jl.git
Tree: da39ade85b86828cdf2b7df303c3cd5304955ff1

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SymbolicUtils/Versions.toml
+++ b/S/SymbolicUtils/Versions.toml
@@ -75,3 +75,6 @@ git-tree-sha1 = "8269010d00bd180e101d6f0acd43576122d1a1fe"
 
 ["0.7.4"]
 git-tree-sha1 = "432247467eb5b0b0d4096c96005bfb8558153752"
+
+["0.7.5"]
+git-tree-sha1 = "da39ade85b86828cdf2b7df303c3cd5304955ff1"
