New version: Stan v6.3.2
UUID: 682df890-35be-576f-97d0-3d8c8b33a550
Repo: https://github.com/StanJulia/Stan.jl.git
Tree: 90f2b4d5a5ea61131b50902f0d3ed1f65d5ad876

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/Stan/Versions.toml
+++ b/S/Stan/Versions.toml
@@ -81,3 +81,6 @@ git-tree-sha1 = "e9943b23e049ef256466f2d993cbb2bd357b0172"
 
 ["6.3.0"]
 git-tree-sha1 = "563cb06dcd030d3dd2c853978dbf378cbd84479d"
+
+["6.3.2"]
+git-tree-sha1 = "90f2b4d5a5ea61131b50902f0d3ed1f65d5ad876"
