--- a/S/Stan/Compat.toml
+++ b/S/Stan/Compat.toml
@@ -84,11 +84,16 @@ DataFrames = "0.21"
 StanBase = "2-3"
 StanDiagnose = "2-3"
 StanOptimize = "2-3"
-StanSample = "2-3"
 StanVariational = "2-3"
+
+["6.1-6.3.0"]
+StanSample = "2-3"
 
 ["6.1.3-6"]
 DataFrames = "0.21-0.22"
 
 ["6.1.5-6"]
 CSV = "0.8"
+
+["6.3.2-6"]
+StanSample = "3"
