New version: StanBase v2.2.3
UUID: d0ee94f6-a23d-54aa-bbe9-7f572d6da7f5
Repo: https://github.com/StanJulia/StanBase.jl.git
Tree: aad80d31e56d3d853b177a8ba28ecffccea299bc

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StanBase/Versions.toml
+++ b/S/StanBase/Versions.toml
@@ -96,3 +96,6 @@ git-tree-sha1 = "067f84df1a5c4621e4447a7798514fbe7d43030f"
 
 ["2.2.2"]
 git-tree-sha1 = "32d1f8f9fdadf56784ec46d660701d6e89e027e2"
+
+["2.2.3"]
+git-tree-sha1 = "aad80d31e56d3d853b177a8ba28ecffccea299bc"
