New version: StanDiagnose v2.2.1
UUID: fb13fc95-9a72-5e81-90ef-432a29d7f4c2
Repo: https://github.com/StanJulia/StanDiagnose.jl.git
Tree: f31c105ddc0c48aae734dcc0a2a59cfcdeddc920

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StanDiagnose/Versions.toml
+++ b/S/StanDiagnose/Versions.toml
@@ -57,3 +57,6 @@ git-tree-sha1 = "9185fc5b7b14fabfd32cdaf359ecfe9f6acc14c2"
 
 ["2.2.0"]
 git-tree-sha1 = "38940e27cd89622b2e031193f442810ce7c60ebf"
+
+["2.2.1"]
+git-tree-sha1 = "f31c105ddc0c48aae734dcc0a2a59cfcdeddc920"
