--- a/S/StanVariational/Versions.toml
+++ b/S/StanVariational/Versions.toml
@@ -63,3 +63,6 @@ git-tree-sha1 = "303aeb11ec7bf6294c0b8d15fe072908e1c8ed9a"
 
 ["2.2.0"]
 git-tree-sha1 = "215bcd9bf012451665177262b18afa434f5806f2"
+
+["2.2.1"]
+git-tree-sha1 = "f40cd80723ed1221490e780e62c18a26c1aa1fee"
