New version: ClassicalCiphers v2.1.0
UUID: ecf26e93-935c-5e64-9b21-bc8ac81b4723
Repo: https://github.com/Smaug123/ClassicalCiphers.jl.git
Tree: 0f0a8932c0b71479de6c749a814820a513fb7cb9

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/ClassicalCiphers/Versions.toml
+++ b/C/ClassicalCiphers/Versions.toml
@@ -1,2 +1,5 @@
 ["2.0.1"]
 git-tree-sha1 = "e4332e88da7a30a4b063dec95596583171f63521"
+
+["2.1.0"]
+git-tree-sha1 = "0f0a8932c0b71479de6c749a814820a513fb7cb9"
