New version: CitableTeiReaders v0.3.0
UUID: b4325aa9-906c-402e-9c3f-19ab8a88308e
Repo: https://github.com/HCMID/CitableTeiReaders.jl.git
Tree: 190d395615cac8d309d2b41fd61f3e415b939fee

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CitableTeiReaders/Versions.toml
+++ b/C/CitableTeiReaders/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "5e2b46fd913111335ccfdcefc5e9920aafff3082"
 
 ["0.2.1"]
 git-tree-sha1 = "bc4e88adcef8ab7f681c906b96883dca6548e547"
+
+["0.3.0"]
+git-tree-sha1 = "190d395615cac8d309d2b41fd61f3e415b939fee"
