New version: StanModels v2.1.3
UUID: fb740163-aa3c-59c1-9c12-c3f890714cde
Repo: https://github.com/StatisticalRethinkingJulia/StanModels.jl.git
Tree: de6692470b81dcd84fe33fb0ff9ead9c0ba2b229

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StanModels/Versions.toml
+++ b/S/StanModels/Versions.toml
@@ -54,3 +54,6 @@ git-tree-sha1 = "f2e27161d452f5f58c4870405a00f72df4dede42"
 
 ["2.1.2"]
 git-tree-sha1 = "c5493b295cf0421e7ae51ed7636226fbd8e3ff2d"
+
+["2.1.3"]
+git-tree-sha1 = "de6692470b81dcd84fe33fb0ff9ead9c0ba2b229"
