New version: CmdStan v6.1.5
UUID: 593b3428-ca2f-500c-ae53-031589ec8ddd
Repo: https://github.com/StanJulia/CmdStan.jl.git
Tree: 2a7ad7d3d1435dec4ba90c997f00ff536ad5fb6a

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CmdStan/Versions.toml
+++ b/C/CmdStan/Versions.toml
@@ -132,3 +132,6 @@ git-tree-sha1 = "0aff36f9f8b3486163bd9f52c9bc4385be6878a9"
 
 ["6.1.4"]
 git-tree-sha1 = "812ce39e74d6ef094a2bec043bcf4defd8cd28c8"
+
+["6.1.5"]
+git-tree-sha1 = "2a7ad7d3d1435dec4ba90c997f00ff536ad5fb6a"
