--- a/O/Orthography/Versions.toml
+++ b/O/Orthography/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "f2352aacf8076a42f135a756cbfab1fe4ae5c4bd"
+
+["0.2.0"]
+git-tree-sha1 = "92a6ca1365d6aca465c589d33f75184e14103c0c"
