New package: SR v0.1.0
UUID: 1facaa83-7390-4384-bb93-b4fe311af058
Repo: https://github.com/MilesCranmer/SymbolicRegression.jl.git
Tree: 4212990c066a3d5d5af3fdba9a2b7652b8c2c402

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -653,6 +653,7 @@ some amount of consideration when choosing package names.
 1f764b34-43ae-408e-9bb4-377386bc1704 = { name = "HMRowUnification", path = "H/HMRowUnification" }
 1f9da163-5ddd-5895-b7bb-161347ed2303 = { name = "StanMamba", path = "S/StanMamba" }
 1fa38f19-a742-5d3f-a2b9-30dd87b9d5f8 = { name = "Format", path = "F/Format" }
+1facaa83-7390-4384-bb93-b4fe311af058 = { name = "SR", path = "S/SR" }
 1fad7336-0346-5a1a-a56f-a06ba010965b = { name = "LazyStack", path = "L/LazyStack" }
 1fb05d12-6c47-528b-bee1-deadc63ff0b4 = { name = "Sched", path = "S/Sched" }
 1fb6a985-f65d-4707-9052-04af0f7ae9ca = { name = "Firestore", path = "F/Firestore" }
