--- a/P/ProgressLogging/Versions.toml
+++ b/P/ProgressLogging/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "e47914361d124d8760f5e356403daeb7f3b81633"
 
 ["0.1.3"]
 git-tree-sha1 = "59398022b661b6fd569f25de6b18fde39843196a"
+
+["0.1.5"]
+git-tree-sha1 = "a7641c030f548fc8ef9981d37d8311c3c29e98e9"
