New version: EditorsRepo v0.5.0
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: a650eb1c83c648cf8b9ea82afc2d3e27ed56dc8f

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Deps.toml
+++ b/E/EditorsRepo/Deps.toml
@@ -11,3 +11,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 ["0.3.2-0"]
 CitablePhysicalText = "e38a874e-a7c2-4ff3-8dea-81ae2e5c9b07"
+
+["0.5-0"]
+EditionBuilders = "2fb66cca-c1f8-4a32-85dd-1a01a9e8cd8f"
+Orthography = "0b4c9448-09b0-4e78-95ea-3eb3328be36d"
