--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "8ee674bb9a4a6f401777b6185c8b18a57a6a4e0b"
 
 ["0.4.1"]
 git-tree-sha1 = "06fc9811706a052a826ec9141caa94abf6db09d9"
+
+["0.5.0"]
+git-tree-sha1 = "a650eb1c83c648cf8b9ea82afc2d3e27ed56dc8f"
