--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,10 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
-      - if: 'false'
-        run: rm -f .ci/Manifest.toml
+      - shell: julia {0}
+        run: |
+          if Base.VERSION < v"1.4"
+              rm(joinpath(pwd(), ".ci", "Manifest.toml"); force = true)
+          end
       - run: .ci/travis_before_script.sh
       - run: julia --project=.ci/ --color=yes -e 'import RegistryCI; RegistryCI.test()'
