--- a/.github/workflows/remember_to_update_registryci.yml
+++ b/.github/workflows/remember_to_update_registryci.yml
@@ -7,19 +7,45 @@ on:
 
 jobs:
   remember_to_update_registryci:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
+    strategy:
+      fail-fast: false
+      matrix:
+        version:
+          - '1.5.3'
+          - '^1.6.0-0' # TODO: remove this line once 1.6 is released
+          # - '1.6'    # TODO: uncomment this line once 1.6 is released
+        os:
+          - ubuntu-latest
+        arch:
+          - x64
     steps:
       - uses: actions/checkout@af513c7a016048ae468971c52ed77d9562c7c819 # v1.0.0
       - uses: julia-actions/setup-julia@d3ce119a16594ea9e5d7974813970c73b6ab9e94 # v1.4.1
         with:
-          version: '^1.6.0-0' # TODO: remove this line once 1.6 is released
-          # version: '1'      # TODO: uncomment this line once 1.6 is released
-      - name: Install dependencies
-        run: julia -e 'import Pkg; Pkg.add(["GitCommand", "GitHub", "Pkg"])'
+          version: ${{ matrix.version }}
+          arch: ${{ matrix.arch }}
+      - name: Install dependencies of remember_to_update_registryci.jl
+        run: julia -e 'import Pkg; Pkg.add(["GitHub", "Pkg"])'
         env:
           JULIA_PKG_SERVER: ''
+      - shell: julia {0}
+        run: |
+          if Base.VERSION == v"1.5.3"
+              mv(joinpath(pwd(), ".ci", "Manifest.toml"), joinpath(pwd(), ".ci", "Manifest.toml.original"); force = true)
+          else
+              rm(joinpath(pwd(), ".ci", "Manifest.toml"); force = true)
+          end
       - name: Update .ci/Manifest.toml
         run: julia -e 'include(".ci/remember_to_update_registryci.jl"); "${{ github.repository }}" == "JuliaRegistries/General" && RememberToUpdateRegistryCI.main(".ci"; registry = "${{ github.repository }}", cc_usernames = String[])'
         env:
           GITHUB_TOKEN: ${{ secrets.TAGBOT_TOKEN }}
           JULIA_PKG_SERVER: ''
+      - shell: julia {0}
+        run: |
+          if Base.VERSION == v"1.5.3"
+             mv(joinpath(pwd(), ".ci", "Manifest.toml"), joinpath(pwd(), ".ci", "Manifest.1.5.3.toml"); force = true)
+             mv(joinpath(pwd(), ".ci", "Manifest.toml.original"), joinpath(pwd(), ".ci", "Manifest.toml"); force = true)
+          else
+          end
