--- a/F/FluxTraining/Deps.toml
+++ b/F/FluxTraining/Deps.toml
@@ -2,7 +2,6 @@
 Animations = "27a7e980-b3e6-11e9-2bcd-0b925532e340"
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
-DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
@@ -14,3 +13,10 @@ TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 ValueHistories = "98cad3c8-aec3-5f06-8e41-884608649ab7"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+["0-0.1.0"]
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+
+["0.1.1-0"]
+ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
