--- a/F/FluxTraining/Versions.toml
+++ b/F/FluxTraining/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "3003dae92dab8c63236db9353538e9d4c07eff09"
+
+["0.1.1"]
+git-tree-sha1 = "dab1385afcd07ce8baecf549a299e174f8ff9957"
