New version: EditorsRepo v0.6.0
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: 61ec8e9a8edeacc5c5821c4c979763065e162f5b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "06fc9811706a052a826ec9141caa94abf6db09d9"
 
 ["0.5.0"]
 git-tree-sha1 = "a650eb1c83c648cf8b9ea82afc2d3e27ed56dc8f"
+
+["0.6.0"]
+git-tree-sha1 = "61ec8e9a8edeacc5c5821c4c979763065e162f5b"
