New version: DelayEmbeddings v1.20.0
UUID: 5732040d-69e3-5649-938a-b6b4f237613f
Repo: https://github.com/JuliaDynamics/DelayEmbeddings.jl.git
Tree: 9e8eaf505c7d237834e67421fdae267fc154ed9b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DelayEmbeddings/Versions.toml
+++ b/D/DelayEmbeddings/Versions.toml
@@ -129,3 +129,6 @@ git-tree-sha1 = "142a321f5c433ba9b2fad41eb665efdd447d7c1a"
 
 ["1.19.3"]
 git-tree-sha1 = "e80dccfaf48b128031f0fdb3ad55b397e2ccac10"
+
+["1.20.0"]
+git-tree-sha1 = "9e8eaf505c7d237834e67421fdae267fc154ed9b"
