--- a/P/PovertyAndInequalityMeasures/Compat.toml
+++ b/P/PovertyAndInequalityMeasures/Compat.toml
@@ -5,5 +5,8 @@ TableTraits = "1"
 TableTraitsUtils = "1.0.1-1"
 julia = "1"
 
-["1.0.1-1"]
+["1.0.1"]
 DataFrames = "0.21.7-0.21"
+
+["1.0.2-1"]
+DataFrames = "0.21.7-0.22"
