--- a/Registry.toml
+++ b/Registry.toml
@@ -3378,6 +3378,7 @@ acf6eb54-70d9-11e9-0013-234b7a5f5337 = { name = "DFTK", path = "D/DFTK" }
 ad2082ca-a69e-11e9-38fa-e96309a31fe4 = { name = "ExportAll", path = "E/ExportAll" }
 ad3d3fd0-b5f2-51ee-b274-8cdbe62317e2 = { name = "SOFA", path = "S/SOFA" }
 ad42c870-428c-46ff-ae37-01b7349146a9 = { name = "AdversarialPrediction", path = "A/AdversarialPrediction" }
+ad5dd64e-dea8-4d37-96e4-0049a8e21092 = { name = "DictionaryIndexing", path = "D/DictionaryIndexing" }
 ad72c4b6-2990-538c-bd38-e122d63d24d9 = { name = "Kpax3", path = "K/Kpax3" }
 ad7b0a5e-d6ee-550c-835e-59a288c14bf3 = { name = "XFloats", path = "X/XFloats" }
 ad839575-38b3-5650-b840-f874b8c74a25 = { name = "Blink", path = "B/Blink" }
