New version: EditorsRepo v0.6.1
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: d04a6c104030ce6a4abd370e5c3737d5b8339f24

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "a650eb1c83c648cf8b9ea82afc2d3e27ed56dc8f"
 
 ["0.6.0"]
 git-tree-sha1 = "61ec8e9a8edeacc5c5821c4c979763065e162f5b"
+
+["0.6.1"]
+git-tree-sha1 = "d04a6c104030ce6a4abd370e5c3737d5b8339f24"
