New version: EditorsRepo v0.6.2
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: 3f4166178e60ee4f94b9774e2df85bb96d8b9fbf

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "61ec8e9a8edeacc5c5821c4c979763065e162f5b"
 
 ["0.6.1"]
 git-tree-sha1 = "d04a6c104030ce6a4abd370e5c3737d5b8339f24"
+
+["0.6.2"]
+git-tree-sha1 = "3f4166178e60ee4f94b9774e2df85bb96d8b9fbf"
