--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/stale@b12dccced80582bf8c52244f75838892ec5c1e82
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-pr-message: 'This pull request has been inactive for 30 days and will be automatically closed 7 days from now. Post a comment if this pull request should not be closed.'
+        stale-pr-message: 'This pull request has been inactive for 30 days and will be automatically closed 7 days from now. If this pull request should not be closed, please either (1) fix the AutoMerge issues and re-trigger Registrator, which will automatically update the pull request, or (2) post a comment explaining why you would like this pull request to be manually merged.'
         close-pr-message: 'This pull request has been inactive for more than 30 days and has automatically been closed. Feel free to register your package or version again once you fix AutoMerge issues.'
         days-before-stale: 30
         days-before-close: 7
