--- a/T/TuringModels/Compat.toml
+++ b/T/TuringModels/Compat.toml
@@ -22,7 +22,7 @@ Turing = "0.0.0 - 0.7"
 ["0-0.1"]
 MCMCChain = "0.0.0 - 0.2"
 
-[0-1]
+[0-2]
 julia = "1"
 
 ["0.2-0"]
@@ -56,7 +56,6 @@ Turing = "0.13"
 
 ["1.0.3-1"]
 MCMCChains = "3-4"
-StatsFuns = "0.9"
 
 ["1.0.3-1.0"]
 DataFrames = "0.21"
@@ -64,6 +63,9 @@ DataFrames = "0.21"
 ["1.0.3-1.0.5"]
 CSV = "0.7"
 Distributions = "0.23"
+
+["1.0.3-2"]
+StatsFuns = "0.9"
 
 ["1.0.4-1.0"]
 Turing = "0.13-0.14"
@@ -82,3 +84,13 @@ Turing = "0.13-0.15"
 
 ["1.1.1-1"]
 Reexport = ["0.2", "1"]
+
+[2]
+CSV = "0.8"
+DataFrames = "0.22"
+Distributions = "0.24"
+Franklin = "0.10"
+NodeJS = "1.1.0-1"
+RData = "0.7"
+StatsPlots = "0.14"
+Turing = "0.15"
