New version: TuringModels v2.0.0
UUID: ead7e11d-4ba5-55c3-9d74-177ea73ef1fd
Repo: https://github.com/StatisticalRethinkingJulia/TuringModels.jl.git
Tree: 5410cbb86296402cbfbfe47bff1700d2a5b087cf

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/T/TuringModels/Versions.toml
+++ b/T/TuringModels/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "8a1fdb7b3a4b1e60d33739b11040ff0d3267f62f"
 
 ["1.1.2"]
 git-tree-sha1 = "7083a881f5e0bbe9f9256b1d44d38dbbd449e522"
+
+["2.0.0"]
+git-tree-sha1 = "5410cbb86296402cbfbfe47bff1700d2a5b087cf"
