New version: PkgAuthentication v1.1.0
UUID: 4722fa14-9d28-45f9-a1e2-a38605bd88f0
Repo: https://github.com/JuliaComputing/PkgAuthentication.jl.git
Tree: 4e130eee4dccd4a0d6de8811c31b2440d3834713

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/PkgAuthentication/Versions.toml
+++ b/P/PkgAuthentication/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "142c3bf8b86ee00672d0c194c9c163239cf85633"
 
 ["1.0.2"]
 git-tree-sha1 = "066ca4499cb4f2c99bc44c3e3b08daf6189c1f1a"
+
+["1.1.0"]
+git-tree-sha1 = "4e130eee4dccd4a0d6de8811c31b2440d3834713"
