New version: ChainRulesTestUtils v0.6.2
UUID: cdddcdb0-9152-4a09-a978-84456f9df70a
Repo: https://github.com/JuliaDiff/ChainRulesTestUtils.jl.git
Tree: 9db1c5a5fb6954a6e3dea7528c9d802dbfd6752f

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/ChainRulesTestUtils/Versions.toml
+++ b/C/ChainRulesTestUtils/Versions.toml
@@ -90,3 +90,6 @@ git-tree-sha1 = "fce3f31a4633038c99759aeac737e8dd3f263d69"
 
 ["0.6.1"]
 git-tree-sha1 = "ef9a14f5f88557f29c078e9f4ab0247ad38ff775"
+
+["0.6.2"]
+git-tree-sha1 = "9db1c5a5fb6954a6e3dea7528c9d802dbfd6752f"
