New version: EditorsRepo v0.6.3
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: db873a8c35ac9d8fd6f47946efba2c1895b045bd

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "d04a6c104030ce6a4abd370e5c3737d5b8339f24"
 
 ["0.6.2"]
 git-tree-sha1 = "3f4166178e60ee4f94b9774e2df85bb96d8b9fbf"
+
+["0.6.3"]
+git-tree-sha1 = "db873a8c35ac9d8fd6f47946efba2c1895b045bd"
