New version: DelayEmbeddings v1.20.1
UUID: 5732040d-69e3-5649-938a-b6b4f237613f
Repo: https://github.com/JuliaDynamics/DelayEmbeddings.jl.git
Tree: e2c028af0343a65549358f84ff87c43f5ef0473b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DelayEmbeddings/Versions.toml
+++ b/D/DelayEmbeddings/Versions.toml
@@ -132,3 +132,6 @@ git-tree-sha1 = "e80dccfaf48b128031f0fdb3ad55b397e2ccac10"
 
 ["1.20.0"]
 git-tree-sha1 = "9e8eaf505c7d237834e67421fdae267fc154ed9b"
+
+["1.20.1"]
+git-tree-sha1 = "e2c028af0343a65549358f84ff87c43f5ef0473b"
