--- a/S/Stan/Versions.toml
+++ b/S/Stan/Versions.toml
@@ -81,3 +81,6 @@ git-tree-sha1 = "e9943b23e049ef256466f2d993cbb2bd357b0172"
 
 ["6.3.0"]
 git-tree-sha1 = "563cb06dcd030d3dd2c853978dbf378cbd84479d"
+
+["6.3.1"]
+git-tree-sha1 = "9713bfb0c3fd79135fdd376a70c6b28245b834f8"
