--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "3f4166178e60ee4f94b9774e2df85bb96d8b9fbf"
 
 ["0.6.3"]
 git-tree-sha1 = "db873a8c35ac9d8fd6f47946efba2c1895b045bd"
+
+["0.6.4"]
+git-tree-sha1 = "321a6e2737bdea89a2bddd607055eadf3053df76"
