New version: CompatHelperLocal v0.1.14
UUID: 5224ae11-6099-4aaa-941d-3aab004bd678
Repo: https://gitlab.com/aplavin/CompatHelperLocal.jl.git
Tree: 31af340876cbbe63c82b13e1da65c8ab1b258a1c

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CompatHelperLocal/Versions.toml
+++ b/C/CompatHelperLocal/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.4"]
 git-tree-sha1 = "edd696df7d97d1ad7e63d3e1f390723d911ed256"
+
+["0.1.14"]
+git-tree-sha1 = "31af340876cbbe63c82b13e1da65c8ab1b258a1c"
