New version: SquashFS v0.1.6
UUID: 22a32d6d-8ff7-41da-a9cb-095a6e0fb6ae
Repo: https://gitlab.com/aplavin/SquashFS.jl.git
Tree: 29de78c5582161a36c3f3abc12e462610c13e64e

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SquashFS/Versions.toml
+++ b/S/SquashFS/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.4"]
 git-tree-sha1 = "1a4324ec55658d6cb76f890d57ccef6d713b9165"
+
+["0.1.6"]
+git-tree-sha1 = "29de78c5582161a36c3f3abc12e462610c13e64e"
