--- a/I/InteractiveChaos/Versions.toml
+++ b/I/InteractiveChaos/Versions.toml
@@ -75,3 +75,6 @@ git-tree-sha1 = "e41f70f9a8e7cbaddc701d03d1304cd311dfdcfe"
 
 ["0.11.1"]
 git-tree-sha1 = "651cbd5eb0bf8266ec17aef87df23614547d7c89"
+
+["0.12.0"]
+git-tree-sha1 = "31b4d5b933b5d334815cf38bcb7eb9fdfca57f7c"
