New version: BibInternal v0.2.5
UUID: 2027ae74-3657-4b95-ae00-e2f7d55c3e64
Repo: https://github.com/Azzaare/BibInternal.jl.git
Tree: 96bd77118a0998d374ca0e14d79518bb03e72e15

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/B/BibInternal/Versions.toml
+++ b/B/BibInternal/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "a47ef5ad24aa16e6d84b4454871e2b04049b01a4"
 
 ["0.2.4"]
 git-tree-sha1 = "e0b69621b5ec237fd748710f35ce7a3d0b0694ce"
+
+["0.2.5"]
+git-tree-sha1 = "96bd77118a0998d374ca0e14d79518bb03e72e15"
