New version: BibParser v0.1.10
UUID: 13533e5b-e1c2-4e57-8cef-cac5e52f6474
Repo: https://github.com/Azzaare/BibParser.jl.git
Tree: ca965e4614fe0d674c6c385c69c6dda9de191c6b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/B/BibParser/Versions.toml
+++ b/B/BibParser/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "6a2c5411366d58016820e71aa3e89cb11c453c77"
 
 ["0.1.9"]
 git-tree-sha1 = "37aefb5575dc908e84fd1f4cb98c6004a2408ef4"
+
+["0.1.10"]
+git-tree-sha1 = "ca965e4614fe0d674c6c385c69c6dda9de191c6b"
