--- a/B/BibParser/Compat.toml
+++ b/B/BibParser/Compat.toml
@@ -11,6 +11,10 @@ DataStructures = "0.17.18-0.17"
 ["0.1.1-0.1.2"]
 BibInternal = "0.1.2-0.1"
 
+["0.1.10-0"]
+BibInternal = "0.2"
+DataStructures = "0.18"
+
 ["0.1.3"]
 BibInternal = "0.2"
 
@@ -21,11 +25,11 @@ DataStructures = "0.17.19-0.17"
 ["0.1.7"]
 BibInternal = "0.2.2-0.2"
 
-["0.1.7-0"]
+["0.1.7-0.1.9"]
 DataStructures = "0.17.20-0.17"
 
 ["0.1.8"]
 BibInternal = "0.2.3-0.2"
 
-["0.1.9-0"]
+["0.1.9"]
 BibInternal = "0.2.4-0.2"
