New version: Bibliography v0.2.6
UUID: f1be7e48-bf82-45af-a471-ae754a193061
Repo: https://github.com/Azzaare/Bibliography.jl.git
Tree: f291657f8bc98e6756a2082733c36a3c5b3c5cc0

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/B/Bibliography/Compat.toml
+++ b/B/Bibliography/Compat.toml
@@ -26,9 +26,14 @@ DataStructures = "0.17.20-0.17"
 BibInternal = "0.2.3-0.2"
 BibParser = "0.1.8-0.1"
 
-["0.2.4-0"]
+["0.2.4-0.2.5"]
 DataStructures = "0.17.20-0.18"
 
-["0.2.5-0"]
+["0.2.5"]
 BibInternal = "0.2.4-0.2"
 BibParser = "0.1.9-0.1"
+
+["0.2.6-0"]
+BibInternal = "0.2"
+BibParser = "0.1"
+DataStructures = "0.18"
