--- a/B/Bibliography/Versions.toml
+++ b/B/Bibliography/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "916ed5a0a88e8c89053dd8a371eead5c10ec7d4f"
 
 ["0.2.5"]
 git-tree-sha1 = "4bb039a3e29529998778e41c6493cba30d45420a"
+
+["0.2.6"]
+git-tree-sha1 = "f291657f8bc98e6756a2082733c36a3c5b3c5cc0"
