New version: StaticWebPages v0.2.6
UUID: 5bf9d097-888b-4aa7-96b5-1bfe21b2dbad
Repo: https://github.com/Azzaare/StaticWebPages.jl.git
Tree: 7ef0863f2ac0a0707c3591c972cb6c4d5c779f6f

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StaticWebPages/Versions.toml
+++ b/S/StaticWebPages/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "d3c829f9f0b0f556144e0232bc07ecad01c83d87"
 
 ["0.2.4"]
 git-tree-sha1 = "d94f16c74952a4cc91d2a287f0d1585cbf27a9d0"
+
+["0.2.6"]
+git-tree-sha1 = "7ef0863f2ac0a0707c3591c972cb6c4d5c779f6f"
