--- a/S/StaticWebPages/Versions.toml
+++ b/S/StaticWebPages/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "d3c829f9f0b0f556144e0232bc07ecad01c83d87"
 
 ["0.2.4"]
 git-tree-sha1 = "d94f16c74952a4cc91d2a287f0d1585cbf27a9d0"
+
+["0.2.5"]
+git-tree-sha1 = "c5009b8ce30281121893d0e3a4056d6c73021c57"
