--- a/P/PovertyAndInequalityMeasures/Versions.toml
+++ b/P/PovertyAndInequalityMeasures/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "f944ba76091e22cef1dc4a615ba4890c1cb8e883"
 
 ["1.0.2"]
 git-tree-sha1 = "ce92f2cf5042886d81539bc1dff5d5bc27fa9289"
+
+["1.0.3"]
+git-tree-sha1 = "db72805fcfb4950692ea58d64373d357d789d10b"
