New version: SymbolicRegression v0.2.0
UUID: 8254be44-1295-4e6a-a16d-46603ac705cb
Repo: https://github.com/MilesCranmer/SymbolicRegression.jl.git
Tree: 89a068ce379e3aa8d033a5e22e05d1fd9cb74f23

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SymbolicRegression/Versions.toml
+++ b/S/SymbolicRegression/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "4a0654e50e8a5867695a42644d425c853421a55c"
+
+["0.2.0"]
+git-tree-sha1 = "89a068ce379e3aa8d033a5e22e05d1fd9cb74f23"
