--- a/S/SymbolicRegression/Compat.toml
+++ b/S/SymbolicRegression/Compat.toml
@@ -1,5 +1,11 @@
 [0]
+julia = "1.2.0-1"
+
+["0-0.1"]
 Optim = "1.1.0-1"
 Printf = "1.1.0-1"
 SpecialFunctions = "1.1.0-1"
-julia = "1.2.0-1"
+
+["0.2-0"]
+Optim = ["0.17", "1.1.0-1"]
+SpecialFunctions = ["0.10.1-0.10", "1"]
