New version: PlantHydraulics v0.2.5
UUID: d6acb6ec-f7e4-548d-b108-f8a3d9a6ce13
Repo: https://github.com/Yujie-W/PlantHydraulics.jl.git
Tree: 7ff1c52eccad7784c3dac130e059ab479a0778d2

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/PlantHydraulics/Versions.toml
+++ b/P/PlantHydraulics/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "88c1a4b8b132aa90c097e473cbc1aee6f6aafdd0"
 
 ["0.2.4"]
 git-tree-sha1 = "e385acc729af1f4e28ddc3c5bbe2c4c2e278530d"
+
+["0.2.5"]
+git-tree-sha1 = "7ff1c52eccad7784c3dac130e059ab479a0778d2"
