New package: libbottomify v0.1.0
UUID: bc9c7173-5bb7-4821-8f42-617a465aaeff
Repo: https://github.com/NCPlayz/libbottomify-jl.git
Tree: eca52877a118bb81e81302eb478a7ab4b17fead7

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -3663,6 +3663,7 @@ bc724e2e-2423-57c2-8f10-788c81380fc8 = { name = "TypedDelegation", path = "T/Typ
 bc769cb7-f249-5bba-802a-79f18cb247ec = { name = "SMM", path = "S/SMM" }
 bc8ceb21-a8fe-4071-b36a-0b0ea65b9c09 = { name = "Turmeric", path = "T/Turmeric" }
 bc997328-bedd-407e-bcd3-5758e064a52d = { name = "CryptoGroups", path = "C/CryptoGroups" }
+bc9c7173-5bb7-4821-8f42-617a465aaeff = { name = "libbottomify", path = "L/libbottomify" }
 bcb6b82e-7479-5933-8c8e-2e0b909ee6a3 = { name = "IterativeRefinement", path = "I/IterativeRefinement" }
 bccb7ab1-cda7-5383-b12b-a44596912546 = { name = "MarriageMarkets", path = "M/MarriageMarkets" }
 bcd08a7b-43d2-5ff7-b6d4-c458787f915c = { name = "Singular", path = "S/Singular" }
