New version: PlotPlants v0.1.7
UUID: 62700b34-1872-4917-b6af-4f42ae699f38
Repo: https://github.com/Yujie-W/PlotPlants.jl.git
Tree: 6fa4b808419554f6382d65b0e9a23873c63b6faa

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/PlotPlants/Versions.toml
+++ b/P/PlotPlants/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "6cc1507d7b3a9945c0c5f3e8088552218d69d3b0"
 
 ["0.1.6"]
 git-tree-sha1 = "4bb559c6630107947faee84efae3acf7d7f1a7d7"
+
+["0.1.7"]
+git-tree-sha1 = "6fa4b808419554f6382d65b0e9a23873c63b6faa"
