--- a/P/PlotPlants/Compat.toml
+++ b/P/PlotPlants/Compat.toml
@@ -15,8 +15,11 @@ DataFrames = "0.21"
 KernelDensity = "0.6"
 ProgressMeter = "1.4.0-1"
 
-["0.1.3-0"]
+["0.1.3-0.1.6"]
 NetCDF = "0.10"
 
 ["0.1.6-0"]
 DataFrames = "0.21-0.22"
+
+["0.1.7-0"]
+NetCDF = "0.10-0.11"
