--- a/L/LightGBM/Versions.toml
+++ b/L/LightGBM/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "26bdbbaae3daa071cd51d4927f1b1f67846d4e72"
 
 ["0.4.2"]
 git-tree-sha1 = "84dc8ba9d7d188952aa4d05f6d3fd2b1e2932880"
+
+["0.4.3"]
+git-tree-sha1 = "748361426db5297753970153688506729ad98418"
