New version: LocalSearchSolvers v0.1.8
UUID: 2b10edaa-728d-4283-ac71-07e312d6ccf3
Repo: https://github.com/JuliaConstraints/LocalSearchSolvers.jl.git
Tree: cc11ba2d19e2bfd08407b969d94ca1d7973af9b8

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/LocalSearchSolvers/Versions.toml
+++ b/L/LocalSearchSolvers/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "84daeef35ed7a137f3717e943c61e417043504d2"
 
 ["0.1.7"]
 git-tree-sha1 = "41cfa445bd974f499f2ae33ac73f4a0aa972711f"
+
+["0.1.8"]
+git-tree-sha1 = "cc11ba2d19e2bfd08407b969d94ca1d7973af9b8"
