--- a/L/LocalSearchSolvers/Compat.toml
+++ b/L/LocalSearchSolvers/Compat.toml
@@ -26,8 +26,15 @@ CompositionalNetworks = "0.1.2-0.1"
 ConstraintDomains = "0.1.1-0.1"
 Constraints = "0.1.5-0.1"
 
-["0.1.7-0"]
+["0.1.7"]
 CompositionalNetworks = "0.1.3-0.1"
 ConstraintDomains = "0.1.2-0.1"
 Constraints = "0.1.7-0.1"
+
+["0.1.7-0"]
 Dictionaries = "0.3"
+
+["0.1.8-0"]
+CompositionalNetworks = "0.1"
+ConstraintDomains = "0.1"
+Constraints = "0.1"
