--- a/L/libsingular_julia_jll/Compat.toml
+++ b/L/libsingular_julia_jll/Compat.toml
@@ -21,7 +21,7 @@ julia = "1.5.0-1"
 
 ["0.5-0"]
 JLLWrappers = "1.2.0-1"
-Singular_jll = "402.0.1"
+Singular_jll = "402.0.1-402.0"
 
 ["0.5-0.5.3"]
 julia = "1.3.0-1"
