--- a/L/LibUV_jll/Versions.toml
+++ b/L/LibUV_jll/Versions.toml
@@ -35,6 +35,9 @@ git-tree-sha1 = "5e34e2d61898ea8b696491789c1a6a1c3653282e"
 git-tree-sha1 = "e5a3c7ad85dc4621422072e186c7b2d6461b0305"
 yanked = true
 
+["2.0.0+12"]
+git-tree-sha1 = "a4f093504426551c0afd1a1614d0d6614635ef53"
+
 ["2.0.1+0"]
 git-tree-sha1 = "3c2837160dc2a9b9eda97f33856caf6e9dd0cc07"
 
