New version: CitableTeiReaders v0.4.0
UUID: b4325aa9-906c-402e-9c3f-19ab8a88308e
Repo: https://github.com/HCMID/CitableTeiReaders.jl.git
Tree: c1138d1cd28a1192519be6bfb5eb7bdfaafeb132

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CitableTeiReaders/Versions.toml
+++ b/C/CitableTeiReaders/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "bc4e88adcef8ab7f681c906b96883dca6548e547"
 
 ["0.3.0"]
 git-tree-sha1 = "190d395615cac8d309d2b41fd61f3e415b939fee"
+
+["0.4.0"]
+git-tree-sha1 = "c1138d1cd28a1192519be6bfb5eb7bdfaafeb132"
