New version: EditorsRepo v0.6.5
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: d285b32a353d45d29eea227a4c57c7c922b6e347

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "db873a8c35ac9d8fd6f47946efba2c1895b045bd"
 
 ["0.6.4"]
 git-tree-sha1 = "321a6e2737bdea89a2bddd607055eadf3053df76"
+
+["0.6.5"]
+git-tree-sha1 = "d285b32a353d45d29eea227a4c57c7c922b6e347"
