--- a/Y/Yota/Versions.toml
+++ b/Y/Yota/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "7bc02d17a8f1728bcb8a47e6856eb3e0237b6877"
 
 ["0.4.3"]
 git-tree-sha1 = "977d232687e3ee8898b732833ed1d826276bf7d6"
+
+["0.4.4"]
+git-tree-sha1 = "149abce172d2b2f64a369aa2220d65802dc5288c"
