New version: EditionBuilders v0.2.0
UUID: 2fb66cca-c1f8-4a32-85dd-1a01a9e8cd8f
Repo: https://github.com/HCMID/EditionBuilders.jl.git
Tree: 494bafa6b71c68ecb46f1aecb0b6f0460c9a7b22

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "1dc7d14c300afeadc7fd5489069a6203bb73d7e6"
+
+["0.2.0"]
+git-tree-sha1 = "494bafa6b71c68ecb46f1aecb0b6f0460c9a7b22"
