New package: ScanByte v0.1.0
UUID: 7b38b023-a4d7-4c5e-8d43-3f3097f304eb
Repo: https://github.com/jakobnissen/ScanByte.jl.git
Tree: fab44ce985be3a7f746efd9fe69a64f774be58e0

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -2439,6 +2439,7 @@ some amount of consideration when choosing package names.
 7b2266bf-644c-5ea3-82d8-af4bbd25a884 = { name = "PeriodicTable", path = "P/PeriodicTable" }
 7b33fef7-ef1d-5d54-bb67-cf96d4c8a166 = { name = "BigCombinatorics", path = "B/BigCombinatorics" }
 7b36c455-f227-419f-b582-14f635f70924 = { name = "FinancialPortfolios", path = "F/FinancialPortfolios" }
+7b38b023-a4d7-4c5e-8d43-3f3097f304eb = { name = "ScanByte", path = "S/ScanByte" }
 7b39b095-d77a-58fa-8447-59aa0294474b = { name = "ExSup", path = "E/ExSup" }
 7b4b3212-f72a-4ba2-afa8-103f0bfb7cd6 = { name = "QuasinormalModes", path = "Q/QuasinormalModes" }
 7b86fcea-f67b-53e1-809c-8f1719c154e8 = { name = "ATK_jll", path = "A/ATK_jll" }
