--- a/C/CpuId/Versions.toml
+++ b/C/CpuId/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "44529456cba0185724fc4bb995943416c5d94be3"
 
 ["0.2.2"]
 git-tree-sha1 = "f0464e499ab9973b43c20f8216d088b61fda80c6"
+
+["0.3.0"]
+git-tree-sha1 = "32d125af0fb8ec3f8935896122c5e345709909e5"
