New package: Polarisation v0.1.0
UUID: 606afd24-34ae-43cb-b3df-40d2cc14ba61
Repo: https://github.com/oleskiewicz/Polarisation.jl.git
Tree: 12cb0c961340320d33141d77b9f8076668a4894a

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -1920,6 +1920,7 @@ some amount of consideration when choosing package names.
 6042db11-3c3d-5e84-8dba-9cbf74c9ba48 = { name = "JDBC", path = "J/JDBC" }
 6043864f-155a-5464-b5be-64e090a46784 = { name = "UnitfulIntegration", path = "U/UnitfulIntegration" }
 60508b50-96e1-4007-9d6c-f475c410f16b = { name = "ColorBlendModes", path = "C/ColorBlendModes" }
+606afd24-34ae-43cb-b3df-40d2cc14ba61 = { name = "Polarisation", path = "P/Polarisation" }
 607c11b8-770f-4df0-ace8-6eaa1ea2719e = { name = "HealthMLBase", path = "H/HealthMLBase" }
 607db5a9-722a-4af8-9a06-1810c0fe385b = { name = "DifferentialEvolutionMCMC", path = "D/DifferentialEvolutionMCMC" }
 608a59af-f2a3-5ad4-90b4-758bdf3122a7 = { name = "ChaosTools", path = "C/ChaosTools" }
