--- a/C/CompositionalNetworks/Compat.toml
+++ b/C/CompositionalNetworks/Compat.toml
@@ -20,5 +20,8 @@ ConstraintDomains = "0.1"
 ["0.1.1-0"]
 Evolutionary = "0.7-0.8"
 
-["0.1.3-0"]
+["0.1.3"]
 ConstraintDomains = "0.1.2-0.1"
+
+["0.1.4-0"]
+ConstraintDomains = "0.1"
