--- a/C/CompositionalNetworks/Versions.toml
+++ b/C/CompositionalNetworks/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "3c4b18a149e09d26600cb216eb41be3d2ec58817"
 
 ["0.1.3"]
 git-tree-sha1 = "bbf66e8f5992b9071da0fc7d6b2f2e8f8d08f32f"
+
+["0.1.4"]
+git-tree-sha1 = "4eb590b507a0730ea24cd3b1a7369030743da74b"
