New package: RandomJl v0.1.0
UUID: 3b47cccd-2e0f-43d2-aaa1-0b61cbee3591
Repo: https://github.com/mrtkp9993/RandomJl.git
Tree: 533ba85dca208d6e3e4adcdfd77a2e4cf4476324

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -1196,6 +1196,7 @@ some amount of consideration when choosing package names.
 3b2b4ff1-bcff-5658-a3ee-dbcf1ce5ac09 = { name = "Multisets", path = "M/Multisets" }
 3b430cce-3194-5812-b203-bf9e73c3e836 = { name = "AEMS", path = "A/AEMS" }
 3b47aaff-9524-5d9d-a292-eeb6a187c032 = { name = "FocusedBlindDecon", path = "F/FocusedBlindDecon" }
+3b47cccd-2e0f-43d2-aaa1-0b61cbee3591 = { name = "RandomJl", path = "R/RandomJl" }
 3b531cbf-ee43-4e67-8118-dca2c9372f86 = { name = "DataConvenience", path = "D/DataConvenience" }
 3b5334fc-ad2e-52bb-943a-614153fa1c0c = { name = "FastHadamardStructuredTransforms_jll", path = "F/FastHadamardStructuredTransforms_jll" }
 3b6521e1-56b2-406b-b1f7-6ae6ec1fb69e = { name = "ExtremalOptimization", path = "E/ExtremalOptimization" }
