New package: Tweaks v0.2.0
UUID: 379a6b09-926d-464b-b907-221504e1dab7
Repo: https://github.com/owinter92/Tweaks.jl.git
Tree: 01f1ee7f49fd3fd192c23509db0895da713165f1

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -1108,6 +1108,7 @@ some amount of consideration when choosing package names.
 3783bdb8-4a98-5b6b-af9a-565f29a5fe9c = { name = "TableTraits", path = "T/TableTraits" }
 3787371a-436b-4cb0-be6b-e772a55e3ebe = { name = "Strapping", path = "S/Strapping" }
 379a43df-f81c-573e-83a6-069eb6c11a71 = { name = "WeightedArrays", path = "W/WeightedArrays" }
+379a6b09-926d-464b-b907-221504e1dab7 = { name = "Tweaks", path = "T/Tweaks" }
 37b6cedf-1f77-55f8-9503-c64b63398394 = { name = "Traceur", path = "T/Traceur" }
 37cfa864-2cd6-5c12-ad9e-b6597d696c81 = { name = "BioCore", path = "B/BioCore" }
 37e2e3b7-166d-5795-8a7a-e32c996b4267 = { name = "ReverseDiff", path = "R/ReverseDiff" }
