New version: SpelledOut v1.1.0
UUID: 4728c690-e668-4265-bc0d-51a8c0f93067
Repo: https://github.com/jakewilliami/SpelledOut.jl.git
Tree: ec6691d1e06d59d7bd848feb759a8fbd82b83467

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SpelledOut/Versions.toml
+++ b/S/SpelledOut/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "97e4deb0f3d5739e74fd99febee0feb7384cbcb2"
 
 ["1.0.3"]
 git-tree-sha1 = "3f7e1bfd53727f35d67af2958776d9e1490ff187"
+
+["1.1.0"]
+git-tree-sha1 = "ec6691d1e06d59d7bd848feb759a8fbd82b83467"
