New version: AgentsPlots v0.4.2
UUID: 7820620d-95fb-4739-93b3-b0a14dd83f9a
Repo: https://github.com/JuliaDynamics/AgentsPlots.jl.git
Tree: d036404fff608c108809b3c00037648cd5d75c2d

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/A/AgentsPlots/Versions.toml
+++ b/A/AgentsPlots/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "004a5725840caa125bd0a4c93315d809aeb83462"
 
 ["0.4.1"]
 git-tree-sha1 = "d1b5ea57ad7507ee5190f49e92fb97842d79c231"
+
+["0.4.2"]
+git-tree-sha1 = "d036404fff608c108809b3c00037648cd5d75c2d"
