--- a/A/AgentsPlots/Compat.toml
+++ b/A/AgentsPlots/Compat.toml
@@ -1,11 +1,11 @@
-[0]
-julia = "1"
-
 ["0-0.1"]
 Plots = "0.28"
 
 ["0-0.2"]
 Agents = "2"
+
+["0-0.4.1"]
+julia = "1"
 
 ["0.2"]
 Plots = "0.28-0.29"
@@ -23,3 +23,6 @@ Reexport = "0.2"
 
 ["0.4-0"]
 Agents = "3-4"
+
+["0.4.2-0"]
+julia = "1.5.0-1"
