New version: Agents v4.0.0
UUID: 46ada45e-f475-11e8-01d0-f70cc89e6671
Repo: https://github.com/JuliaDynamics/Agents.jl.git
Tree: f0ba8d3133444af79d6daa0c4709c0b26e8ea5ff

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/A/Agents/Versions.toml
+++ b/A/Agents/Versions.toml
@@ -87,3 +87,6 @@ git-tree-sha1 = "9e4992c04950464a02c4608695bff2deeb8bc0ba"
 
 ["3.7.1"]
 git-tree-sha1 = "5b42dd6e028c19a0e8d5ac8ec30a5a070e93651f"
+
+["4.0.0"]
+git-tree-sha1 = "f0ba8d3133444af79d6daa0c4709c0b26e8ea5ff"
