--- a/A/Agents/Compat.toml
+++ b/A/Agents/Compat.toml
@@ -18,24 +18,30 @@ Cairo = "0.0.0 - 1"
 Fontconfig = "0.0.0 - 0.4"
 julia = ["0.7.0", "1"]
 
-[2-3]
-LightGraphs = "1"
-
 ["2-3.1.0"]
 DataFrames = "0-1"
 
 ["2-3.3"]
 julia = "1"
 
+[2-4]
+LightGraphs = "1"
+
 ["2.2-2"]
 StatsBase = "0.32"
 
 [3]
 SQLite = "1"
+
+[3-4]
 StatsBase = "0.32-0.33"
 
 ["3.1.1-3"]
 DataFrames = ["0.21", "1"]
 
-["3.4-3"]
+["3.4-4"]
 julia = "1.5.0-1"
+
+[4]
+DataFrames = ["0.21-0.22", "1"]
+OpenStreetMapX = "0.2"
