New version: Bernstein v1.0.2
UUID: e9b0fb4c-9cb7-4f61-9c14-701a41c684d7
Repo: https://github.com/eschnett/Bernstein.jl.git
Tree: 312825ebd7807dffe3e91c8b9debe555be39054b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/B/Bernstein/Versions.toml
+++ b/B/Bernstein/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "3dfc7759439d1242d197b1b30e2e50c15480eeba"
 
 ["1.0.1"]
 git-tree-sha1 = "a89f074f41a537e7d3503ad809c4962987ee2fe5"
+
+["1.0.2"]
+git-tree-sha1 = "312825ebd7807dffe3e91c8b9debe555be39054b"
