--- a/B/Bernstein/Compat.toml
+++ b/B/Bernstein/Compat.toml
@@ -3,8 +3,13 @@ SimplexQuad = "1"
 
 [0-1]
 ComputedFieldTypes = "0.1"
-StaticArrays = "0.12.4-0.12"
 julia = "1.4.0-1"
+
+["0-1.0.1"]
+StaticArrays = "0.12.4-0.12"
 
 ["0.2.3-1"]
 GrundmannMoeller = "0.1.1-0.1"
+
+["1.0.2-1"]
+StaticArrays = ["0.12.4-0.12", "1"]
