New version: GrundmannMoeller v0.1.2
UUID: 36aa67b7-9d79-4e90-bbc0-05abd90a007e
Repo: https://github.com/eschnett/GrundmannMoeller.jl.git
Tree: e264cf5f081091e4af712a911d3b620567c565e3

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/G/GrundmannMoeller/Versions.toml
+++ b/G/GrundmannMoeller/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "532392ab11a9dfb05a1f5c47f4a43bf579fe2500"
 
 ["0.1.1"]
 git-tree-sha1 = "9537b415b1bf50c403f7e431e268d34f19434197"
+
+["0.1.2"]
+git-tree-sha1 = "e264cf5f081091e4af712a911d3b620567c565e3"
