--- a/G/GrundmannMoeller/Compat.toml
+++ b/G/GrundmannMoeller/Compat.toml
@@ -1,3 +1,8 @@
 [0]
-StaticArrays = "0.12.4-0.12"
 julia = "1.4.0-1"
+
+["0-0.1.1"]
+StaticArrays = "0.12.4-0.12"
+
+["0.1.2-0"]
+StaticArrays = ["0.12.4-0.12", "1"]
