New version: Vlasiator v0.1.1
UUID: 7d2ba682-ad6e-4e20-80d9-3f2d4a610bb4
Repo: https://github.com/henry2004y/Vlasiator.jl.git
Tree: 6e1bb354c610524448bb294de6459689166c36f2

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "62a8d7813f24fa384d884356c803b30dff658c51"
+
+["0.1.1"]
+git-tree-sha1 = "6e1bb354c610524448bb294de6459689166c36f2"
