--- a/A/Agents/Compat.toml
+++ b/A/Agents/Compat.toml
@@ -45,3 +45,7 @@ julia = "1.5.0-1"
 [4]
 DataFrames = ["0.21-0.22", "1"]
 OpenStreetMapX = "0.2"
+
+["4.0.2-4"]
+GraphRecipes = "0.5"
+RecipesBase = "1"
