--- a/A/Agents/Deps.toml
+++ b/A/Agents/Deps.toml
@@ -34,3 +34,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [4]
 OpenStreetMapX = "86cd37e6-c0ff-550b-95fe-21d72c8d4fc9"
+
+["4.0.2-4"]
+GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
