New package: DPOMPs v0.1.0
UUID: 080596c8-d784-11ea-1240-a92991e03e9d
Repo: https://github.com/mjb3/DPOMPs.jl.git
Tree: 6bbb52c48778318df3df98621cea323af03b0c33

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -176,6 +176,7 @@ some amount of consideration when choosing package names.
 07f52509-e9d9-513c-a20d-3b911885bf96 = { name = "CSPICE_jll", path = "C/CSPICE_jll" }
 07f847a3-b39a-5451-bea0-0f0f0688aa14 = { name = "BasisFunctionExpansions", path = "B/BasisFunctionExpansions" }
 0802c0ca-1768-4022-988c-6dd5f9588a11 = { name = "GradientRobustMultiPhysics", path = "G/GradientRobustMultiPhysics" }
+080596c8-d784-11ea-1240-a92991e03e9d = { name = "DPOMPs", path = "D/DPOMPs" }
 08074719-1b2a-587c-a292-00f91cc44415 = { name = "POMDPModelTools", path = "P/POMDPModelTools" }
 0810563c-c8a8-53be-b185-e51c33dc41ea = { name = "LogProbs", path = "L/LogProbs" }
 08131aa3-fb12-5dee-8b74-c09406e224a2 = { name = "OpenCL", path = "O/OpenCL" }
