New version: CompScienceMeshes v0.2.8
UUID: 3e66a162-7b8c-5da0-b8f8-124ecd2c3ae1
Repo: https://github.com/krcools/CompScienceMeshes.jl.git
Tree: 8e54028f066cc4559e3a6305747d7d7866cbc58a

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CompScienceMeshes/Versions.toml
+++ b/C/CompScienceMeshes/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "1fb2d7f0025acb0f596d8be5b39c9afbdebb9c77"
 
 ["0.2.7"]
 git-tree-sha1 = "573ed812088f732c24bc87e35e1b39f333f28a76"
+
+["0.2.8"]
+git-tree-sha1 = "8e54028f066cc4559e3a6305747d7d7866cbc58a"
