--- a/C/CompScienceMeshes/Compat.toml
+++ b/C/CompScienceMeshes/Compat.toml
@@ -26,9 +26,7 @@ StaticArrays = "0.8.3 - 0.12"
 Compat = "0.18.0 - 2"
 
 ["0.2.4-0"]
-CollisionDetection = "0.1.1-0.1"
 FastGaussQuadrature = "0.3-0.4"
-StaticArrays = "0.10-0.12"
 
 ["0.2.4-0.2.5"]
 Requires = "0.5.2-0.5"
@@ -37,6 +35,10 @@ Requires = "0.5.2-0.5"
 Combinatorics = "0.6-0.7"
 Compat = "1-2"
 
+["0.2.4-0.2.7"]
+CollisionDetection = "0.1.1-0.1"
+StaticArrays = "0.10-0.12"
+
 ["0.2.5-0"]
 ClusterTrees = "0.2"
 julia = "1"
@@ -44,7 +46,14 @@ julia = "1"
 ["0.2.6-0"]
 Requires = ["0.5.2-0.5", "1"]
 
+["0.2.7"]
+DataStructures = "0.17"
+
 ["0.2.7-0"]
 Combinatorics = ["0.6-0.7", "1"]
 Compat = "1-3"
-DataStructures = "0.17"
+
+["0.2.8-0"]
+CollisionDetection = "0.1"
+DataStructures = "0.17-0.18"
+StaticArrays = ["0.10-0.12", "1"]
