New package: PetscWrap v0.1.0
UUID: 5be22e1c-01b5-4697-96eb-ef9ccdc854b8
Repo: https://github.com/bmxam/PetscWrap.jl.git
Tree: 1bd2e23e2706b088c00a4fbb9d73f4ffe7772aa4

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -1840,6 +1840,7 @@ some amount of consideration when choosing package names.
 5ba52731-8f18-5e0d-9241-30f10d1ec561 = { name = "CodecLz4", path = "C/CodecLz4" }
 5bab7191-041a-5c2e-a744-024b9c3a5062 = { name = "SPICE", path = "S/SPICE" }
 5be0b35e-b7aa-4f8f-be3c-193ee1a845a6 = { name = "MonthlyDates", path = "M/MonthlyDates" }
+5be22e1c-01b5-4697-96eb-ef9ccdc854b8 = { name = "PetscWrap", path = "P/PetscWrap" }
 5be7bae1-8223-5378-bac3-9e7378a2f6e6 = { name = "LBFGSB", path = "L/LBFGSB" }
 5befdd30-5572-5129-8422-0c92d957d47a = { name = "Hilbert", path = "H/Hilbert" }
 5bf49175-83fb-4b6d-82b5-d6ded85154ae = { name = "Countries", path = "C/Countries" }
