New version: PlotSVG v0.3.0
UUID: 38244590-38c0-4f85-8105-e5c469effcd5
Repo: https://github.com/algorithmx/PlotSVG.git
Tree: 125f7833c2ff27475f542f8f39085f9f0985a8b7

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/PlotSVG/Versions.toml
+++ b/P/PlotSVG/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "65922ee4281ca055220484aa7d9055fcad9ac1d9"
 
 ["0.2.0"]
 git-tree-sha1 = "79be7855f4f3663fe74bdb32c48463009d5cb2f0"
+
+["0.3.0"]
+git-tree-sha1 = "125f7833c2ff27475f542f8f39085f9f0985a8b7"
