New package: MTP v0.1.0
UUID: 952b76c5-a10f-4aa4-b3a1-9a1f1ece7e60
Repo: https://github.com/tp2750/MTP.jl.git
Tree: 897addca308f11597514d0305d3a5b76457898b8

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -2962,6 +2962,7 @@ some amount of consideration when choosing package names.
 9516f557-4a54-5a79-b954-c272e753c77a = { name = "Psychro", path = "P/Psychro" }
 952205b0-75a0-561c-bf54-4eaf7b36f838 = { name = "ConicNonlinearBridge", path = "C/ConicNonlinearBridge" }
 9526e54e-4491-4e9f-a840-d78b79cb5e3b = { name = "NASAEarthObservations", path = "N/NASAEarthObservations" }
+952b76c5-a10f-4aa4-b3a1-9a1f1ece7e60 = { name = "MTP", path = "M/MTP" }
 952dd333-a03f-400d-b720-7cb119ba64f7 = { name = "Repos", path = "R/Repos" }
 952f05d4-56a3-4431-900f-8abaa653b4db = { name = "CometLogger", path = "C/CometLogger" }
 955f2c64-5fd0-11e9-0ad0-3332e913311a = { name = "VTKView", path = "V/VTKView" }
