New package: Minio v0.1.0
UUID: 4281f0d9-7ae0-406e-9172-b7277c1efa20
Repo: https://gitlab.com/ExpandingMan/Minio.jl.git
Tree: 8530ed5c22317d5a02178413feec90fd1438d40b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -1354,6 +1354,7 @@ some amount of consideration when choosing package names.
 424e878d-f74a-44ed-9ae4-e4144b72a8ff = { name = "Fourier", path = "F/Fourier" }
 4259d249-1051-49fa-8328-3f8ab9391c33 = { name = "Petri", path = "P/Petri" }
 42699a24-3520-5f41-a549-6a478ed667c2 = { name = "Serd", path = "S/Serd" }
+4281f0d9-7ae0-406e-9172-b7277c1efa20 = { name = "Minio", path = "M/Minio" }
 428bdadb-6287-5aa5-874b-9969638295fd = { name = "SimJulia", path = "S/SimJulia" }
 429524aa-4258-5aef-a3af-852621145aeb = { name = "Optim", path = "O/Optim" }
 429591f6-91af-11e9-00e2-59fbe8cec110 = { name = "ExactPredicates", path = "E/ExactPredicates" }
