New version: PlotPlants v0.1.8
UUID: 62700b34-1872-4917-b6af-4f42ae699f38
Repo: https://github.com/Yujie-W/PlotPlants.jl.git
Tree: 275dd3cfc8fae02e702c65f2109bf5450628957b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/PlotPlants/Compat.toml
+++ b/P/PlotPlants/Compat.toml
@@ -21,5 +21,8 @@ NetCDF = "0.10"
 ["0.1.6-0"]
 DataFrames = "0.21-0.22"
 
-["0.1.7-0"]
+["0.1.7"]
 NetCDF = "0.10-0.11"
+
+["0.1.8-0"]
+NetCDF = "0.10"
