--- a/P/PlotPlants/Versions.toml
+++ b/P/PlotPlants/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "4bb559c6630107947faee84efae3acf7d7f1a7d7"
 
 ["0.1.7"]
 git-tree-sha1 = "6fa4b808419554f6382d65b0e9a23873c63b6faa"
+
+["0.1.8"]
+git-tree-sha1 = "275dd3cfc8fae02e702c65f2109bf5450628957b"
