New package: McDM v0.1.0
UUID: 358108f5-d052-4d0a-8344-d5384e00c0e5
Repo: https://github.com/jbytecode/McDM.git
Tree: 869fffb6d5185d8c982f567126437dad3acd2347

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -1095,6 +1095,7 @@ some amount of consideration when choosing package names.
 35661453-b289-5fab-8a00-3d9160c6a3a4 = { name = "Xorg_xkbcomp_jll", path = "X/Xorg_xkbcomp_jll" }
 356ae075-8bc9-5ef9-a342-46c9ba26438c = { name = "GridArrays", path = "G/GridArrays" }
 3576fdfd-e245-5854-bcf7-dae6dc3117e0 = { name = "capnproto_jll", path = "C/capnproto_jll" }
+358108f5-d052-4d0a-8344-d5384e00c0e5 = { name = "McDM", path = "M/McDM" }
 35a29f4d-8980-5a13-9543-d66fff28ecb8 = { name = "DocumenterTools", path = "D/DocumenterTools" }
 35c9ef8c-44cb-42a7-bccd-f3b9e73321fd = { name = "ParallelMapReduce", path = "P/ParallelMapReduce" }
 35cc5888-0c46-470e-89c7-eafcaf79a1aa = { name = "CryptoSignatures", path = "C/CryptoSignatures" }
