New version: Chemfiles v0.10.0
UUID: 46823bd8-5fb3-5f92-9aa0-96921f3dd015
Repo: https://github.com/chemfiles/Chemfiles.jl.git
Tree: a5bbe572ac105dcf1ad65fbfcd3127cae4526e91

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/Chemfiles/Compat.toml
+++ b/C/Chemfiles/Compat.toml
@@ -1,6 +1,13 @@
 [0]
 julia = "1"
 
+["0.10-0"]
+Chemfiles_jll = "0.10.0"
+Compat = "3.15.0-3"
+DocStringExtensions = "0.8.3-0.8"
+
 ["0.9.3-0"]
 BinaryProvider = "0.5.8-0.5"
+
+["0.9.3-0.9"]
 Chemfiles_jll = "0.9.3"
