--- a/C/Chemfiles/Versions.toml
+++ b/C/Chemfiles/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "d5281034ea727dd0420505afe0ef617040fec333"
 
 ["0.9.3"]
 git-tree-sha1 = "beaea20434327a0a605a0ae08c091a715af3e0c4"
+
+["0.10.0"]
+git-tree-sha1 = "a5bbe572ac105dcf1ad65fbfcd3127cae4526e91"
