New version: Merly v1.0.2
UUID: 5b70daea-9db9-5a46-aedf-2142e553ecc5
Repo: https://github.com/neomatrixcode/Merly.jl.git
Tree: ea3b47cbeb887d6c05b70c057c75f50ff57e7a59

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/M/Merly/Versions.toml
+++ b/M/Merly/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "f5d717cc165850b0a17904835ff0cd298ce34094"
 
 ["1.0.1"]
 git-tree-sha1 = "42f2a9727be4207d436ebec06e8583c28c48ead4"
+
+["1.0.2"]
+git-tree-sha1 = "ea3b47cbeb887d6c05b70c057c75f50ff57e7a59"
