--- a/M/Merly/Compat.toml
+++ b/M/Merly/Compat.toml
@@ -9,13 +9,18 @@ julia = ["0.7", "1"]
 ["0.2-0"]
 julia = "1"
 
-[1]
+["1-1.0.1"]
 julia = "1.5.0-1"
 
 ["1.0.0"]
 HTTP = "0.8.15-0.8"
 MbedTLS = "1.0.2-1"
 
-["1.0.1-1"]
+["1.0.1"]
 HTTP = "0.9.2-0.9"
 MbedTLS = "1.0.3-1"
+
+["1.0.2-1"]
+HTTP = "0.9"
+MbedTLS = "1"
+julia = "1"
