New version: AlphaVantage v0.3.0
UUID: 6348297c-a006-11e8-3a05-9bbf8830fd7b
Repo: https://github.com/ellisvalentiner/AlphaVantage.jl.git
Tree: 5a01743f08260029c58f3a9d1e9da8efabc0baa7

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/A/AlphaVantage/Deps.toml
+++ b/A/AlphaVantage/Deps.toml
@@ -4,3 +4,6 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 HttpCommon = "77172c1b-203f-54ac-aa54-3f1198fe9f90"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+
+["0.3-0"]
+Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
