--- a/A/AlphaVantage/Versions.toml
+++ b/A/AlphaVantage/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "f2a95d5dcf263bc13c1f51b3c0185aa091837032"
 
 ["0.2.2"]
 git-tree-sha1 = "2c22306c47566b63a8bec9a79ee1b7437eb7c4b4"
+
+["0.3.0"]
+git-tree-sha1 = "5a01743f08260029c58f3a9d1e9da8efabc0baa7"
