New version: JMcDM v0.1.2
UUID: 358108f5-d052-4d0a-8344-d5384e00c0e5
Repo: https://github.com/jbytecode/JMcDM.git
Tree: 7577fddde5c2e63c6482c3204e73322fef035ed6

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/J/JMcDM/Versions.toml
+++ b/J/JMcDM/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "61a620ef3325bcc4f2e8f0c2d747f0b009c2543e"
 
 ["0.1.1"]
 git-tree-sha1 = "51c6289bd0dd39ab6c200aca60c13768dc3c8eb1"
+
+["0.1.2"]
+git-tree-sha1 = "7577fddde5c2e63c6482c3204e73322fef035ed6"
