New package: BioGraph v0.1.0
UUID: bbceaa37-9423-4c65-8842-740620a24309
Repo: https://github.com/nguyetdang/BioGraph.jl.git
Tree: f6095beac2479a6fce4ff6a76204fcaaf7a11693

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -3745,6 +3745,7 @@ bbbc800e-c7bf-11e8-107b-9b6d1d23829a = { name = "Struve", path = "S/Struve" }
 bbc10e6e-7c05-544b-b16e-64fede858acb = { name = "DynamicHMC", path = "D/DynamicHMC" }
 bbc22021-04b3-5587-aeab-b7019f0e8a6b = { name = "MarkovChains", path = "M/MarkovChains" }
 bbcbd578-9e06-4913-a16c-0f12dae524fe = { name = "IscaTools", path = "I/IscaTools" }
+bbceaa37-9423-4c65-8842-740620a24309 = { name = "BioGraph", path = "B/BioGraph" }
 bbd82366-0c69-5eef-bed9-5a0dd17fc720 = { name = "JuMPChance", path = "J/JuMPChance" }
 bbd8fffe-5ad0-4d78-a55e-85575421b4ac = { name = "COSMOAccelerators", path = "C/COSMOAccelerators" }
 bbe32c30-8a1d-11e9-18de-655e918680e9 = { name = "Marconi", path = "M/Marconi" }
