New version: SpineBasedRecordLinkage v0.4.0
UUID: c1ccfb80-616c-11e9-2032-47e8246e4458
Repo: https://github.com/JockLawrie/SpineBasedRecordLinkage.jl.git
Tree: 20dea84837512b41d0e7d702b42d603f9259b5f3

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SpineBasedRecordLinkage/Versions.toml
+++ b/S/SpineBasedRecordLinkage/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "e5ea0ad74adc5db940c4d7f644b8fe1b7f601a66"
 
 ["0.3.7"]
 git-tree-sha1 = "6a22076238783e7b6f7fa70f330c14e55763c8f2"
+
+["0.4.0"]
+git-tree-sha1 = "20dea84837512b41d0e7d702b42d603f9259b5f3"
