--- a/S/SpineBasedRecordLinkage/Compat.toml
+++ b/S/SpineBasedRecordLinkage/Compat.toml
@@ -1,4 +1,4 @@
-[0]
+["0-0.3"]
 julia = "1"
 
 ["0-0.3.2"]
@@ -23,12 +23,20 @@ CSV = "0.6"
 DataFrames = "0.20.2-0.20"
 Schemata = "2.0.7-2"
 
-["0.3.6-0"]
+["0.3.6-0.3"]
 StringDistances = "0.6.4-0.6"
 Tables = "1.0.4-1"
 YAML = "0.4"
 
-["0.3.7-0"]
+["0.3.7-0.3"]
 CSV = "0.6.2-0.6"
 DataFrames = "0.21.2-0.21"
 Schemata = "2.0.8-2"
+
+["0.4-0"]
+CSV = "0.8.3-0.8"
+DataFrames = "0.22.5-0.22"
+Schemata = "3"
+StringDistances = "0.10"
+Tables = "1.3.2-1"
+julia = "1.6.0-1"
