--- a/S/SpineBasedRecordLinkage/Deps.toml
+++ b/S/SpineBasedRecordLinkage/Deps.toml
@@ -6,4 +6,9 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Schemata = "b4d66a32-c6c0-5461-b6fa-34bb9cecaf85"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+
+["0-0.3"]
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+
+["0.4-0"]
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
