New version: FileTrees v0.2.0
UUID: 72696420-646e-6120-6e77-6f6420746567
Repo: https://github.com/shashi/FileTrees.jl.git
Tree: c6c4fbce4d7df21b76f38167a6c9a31419b102df

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/F/FileTrees/Versions.toml
+++ b/F/FileTrees/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "b766103a6311ecdeda275cef81bafb0ea857381b"
 
 ["0.1.4"]
 git-tree-sha1 = "557cbd68f8365b23ab4ccd24789034ed43827321"
+
+["0.2.0"]
+git-tree-sha1 = "c6c4fbce4d7df21b76f38167a6c9a31419b102df"
