New package: Yisy_AI_Framework v0.3.2
UUID: 1833fadb-d4a3-4bdc-92b3-7dbe365d2b7d
Repo: https://github.com/SkyWorld117/Yisy-AI-Framework.jl.git
Tree: cd81376b93da408c2da94a71676ef62cb9d59cc1

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -508,6 +508,7 @@ some amount of consideration when choosing package names.
 180207a7-b08e-5162-af94-7d62a04fe081 = { name = "libsharp2_jll", path = "L/libsharp2_jll" }
 18269d71-cc38-4e02-b8c8-1db30113a6dd = { name = "Actors", path = "A/Actors" }
 182e52fb-cfd0-5e46-8c26-fd0667c990f4 = { name = "POMDPPolicies", path = "P/POMDPPolicies" }
+1833fadb-d4a3-4bdc-92b3-7dbe365d2b7d = { name = "Yisy_AI_Framework", path = "Y/Yisy_AI_Framework" }
 18364772-b071-5c00-bfd7-ceeaffab630a = { name = "IPython", path = "I/IPython" }
 183b4373-6708-53ba-ad28-60e28bb38547 = { name = "LibUV_jll", path = "L/LibUV_jll" }
 1841a5aa-d9e2-579c-8226-32ed2af93ab1 = { name = "unixODBC_jll", path = "U/unixODBC_jll" }
