New package: Pitaya v0.1.0
UUID: 0b12f483-aaff-4a42-bf4f-5a3345f2360f
Repo: https://github.com/naustica/Pitaya.git
Tree: dfe881eecfc8c82692aafb2815134d1c47022649

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -239,6 +239,7 @@ some amount of consideration when choosing package names.
 0aeada51-83db-5f97-b67e-184615cfc6f6 = { name = "Xorg_libXdamage_jll", path = "X/Xorg_libXdamage_jll" }
 0af1e411-0638-4d6d-bb05-ed1900b440d5 = { name = "Opus", path = "O/Opus" }
 0af4abc2-9bda-511f-85a5-daebf69421ba = { name = "Xorg_compositeproto_jll", path = "X/Xorg_compositeproto_jll" }
+0b12f483-aaff-4a42-bf4f-5a3345f2360f = { name = "Pitaya", path = "P/Pitaya" }
 0b152c4a-7e29-418b-9258-223db38db9d9 = { name = "SwapStreams", path = "S/SwapStreams" }
 0b1a1467-8014-51b9-945f-bf0ae24f4b77 = { name = "KrylovKit", path = "K/KrylovKit" }
 0b4c9448-09b0-4e78-95ea-3eb3328be36d = { name = "Orthography", path = "O/Orthography" }
