New package: SigmaRidgeRegression v0.1.0
UUID: e566bdc2-f852-4ed0-870a-7389015b131d
Repo: https://github.com/nignatiadis/SigmaRidgeRegression.jl.git
Tree: 687cb83597c48aec55718774f6c5810223e91ebb

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -4611,6 +4611,7 @@ e52e8ede-12bf-4731-8af7-b01f6064cb11 = { name = "QBase", path = "Q/QBase" }
 e53d2b94-6236-11e9-2d7b-535d79ecd3d3 = { name = "DeformableBodies", path = "D/DeformableBodies" }
 e54cec92-43bc-5b69-a0ba-12a83b9121d9 = { name = "GroupedErrors", path = "G/GroupedErrors" }
 e5567a89-2604-4b09-9718-f5f78e97c3bb = { name = "SBML", path = "S/SBML" }
+e566bdc2-f852-4ed0-870a-7389015b131d = { name = "SigmaRidgeRegression", path = "S/SigmaRidgeRegression" }
 e56c3062-542c-497d-ab50-e8a2f2a25ce2 = { name = "PrincipalMomentAnalysisApp", path = "P/PrincipalMomentAnalysisApp" }
 e5719326-7e34-5a7d-b19a-3e86f2e9acf7 = { name = "TriangleMesh", path = "T/TriangleMesh" }
 e575027e-6cd6-5018-9292-cdc6200d2b44 = { name = "ReinforcementLearningBase", path = "R/ReinforcementLearningBase" }
