New version: PlotPlants v0.1.10
UUID: 62700b34-1872-4917-b6af-4f42ae699f38
Repo: https://github.com/Yujie-W/PlotPlants.jl.git
Tree: 67f3b3170e9297d693808b32c0b1319aca9b27e3

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/PlotPlants/Compat.toml
+++ b/P/PlotPlants/Compat.toml
@@ -11,6 +11,12 @@ Revise = "2.7.0-2"
 ["0-0.1.5"]
 DataFrames = "0.21"
 
+["0.1.10-0"]
+FileIO = "1.4.0-1"
+ImageIO = "0.4"
+ImageMagick = "1.1.0-1"
+PkgUtility = "0.1.2-0.1"
+
 ["0.1.2-0"]
 KernelDensity = "0.6"
 ProgressMeter = "1.4.0-1"
