--- a/P/PlotPlants/Deps.toml
+++ b/P/PlotPlants/Deps.toml
@@ -10,6 +10,12 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ["0-0.1.0"]
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
+["0.1.10-0"]
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
+PkgUtility = "0d262f2c-28e9-492c-8e19-d7a5c4f11611"
+
 ["0.1.2-0"]
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
