--- a/P/PlotPlants/Versions.toml
+++ b/P/PlotPlants/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "275dd3cfc8fae02e702c65f2109bf5450628957b"
 
 ["0.1.9"]
 git-tree-sha1 = "197050d7f41a6214319edfbd6892d7d90b6023f4"
+
+["0.1.10"]
+git-tree-sha1 = "67f3b3170e9297d693808b32c0b1319aca9b27e3"
