New version: MLFlowLogger v0.2.0
UUID: a17d1b34-d2df-4d9e-9e11-6289e57bd259
Repo: https://github.com/rejuvyesh/MLFlowLogger.jl.git
Tree: 7085172a9660b4a676e2ca0357ae936e90d94b31

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/M/MLFlowLogger/Versions.toml
+++ b/M/MLFlowLogger/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "cb9316cb34454606582f554bb447a80e2a9eb774"
+
+["0.2.0"]
+git-tree-sha1 = "7085172a9660b4a676e2ca0357ae936e90d94b31"
