New version: JsonGrinder v2.1.5
UUID: d201646e-a9c0-11e8-1063-23b139159713
Repo: https://github.com/CTUAvastLab/JsonGrinder.jl.git
Tree: ce1bb9499719aae762e0cf36a8738d36e0b7c1a8

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/J/JsonGrinder/Compat.toml
+++ b/J/JsonGrinder/Compat.toml
@@ -136,5 +136,8 @@ Setfield = "0.6-0.7"
 ["2.1-2.1.2"]
 Mill = "2.2.0-2"
 
-["2.1.3-2"]
+["2.1.3-2.1.4"]
 Mill = "2.3.0-2"
+
+["2.1.5-2"]
+Mill = "2.4"
