--- a/J/JsonGrinder/Versions.toml
+++ b/J/JsonGrinder/Versions.toml
@@ -120,3 +120,6 @@ git-tree-sha1 = "33fd8b65c109029ee87b7dbab3c6576e346a1730"
 
 ["2.1.4"]
 git-tree-sha1 = "3934ec3b64eab2aaff6c9c1fa130bc89873ebbbd"
+
+["2.1.5"]
+git-tree-sha1 = "ce1bb9499719aae762e0cf36a8738d36e0b7c1a8"
