New package: Bags v0.2.0
UUID: 497ad153-c143-42a2-80c7-87bdfcf8382a
Repo: https://github.com/emmt/Bags.jl.git
Tree: 17010ac030277bcbf9810da3c89f78909a645b54

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -1520,6 +1520,7 @@ some amount of consideration when choosing package names.
 4958c51a-00f6-11ea-2b94-f3f784e4d148 = { name = "AbstractRationals", path = "A/AbstractRationals" }
 496038af-b016-571c-b31e-8262695ac102 = { name = "Lens", path = "L/Lens" }
 497a8b3b-efae-58df-a0af-a86822472b78 = { name = "DoubleFloats", path = "D/DoubleFloats" }
+497ad153-c143-42a2-80c7-87bdfcf8382a = { name = "Bags", path = "B/Bags" }
 49802e3a-d2f1-5c88-81d8-b72133a6f568 = { name = "ProgressBars", path = "P/ProgressBars" }
 4986ee89-4ee5-5cef-b6b8-e49ba721d7a5 = { name = "DynamicalBilliards", path = "D/DynamicalBilliards" }
 498c179e-6d39-5d99-a5ec-710f95d458bc = { name = "RobotDescriptions", path = "R/RobotDescriptions" }
