New version: NeXLCore v0.2.2
UUID: 93a0284f-3680-435e-8d39-dd6e52a1dbc8
Repo: https://github.com/usnistgov/NeXLCore.jl.git
Tree: 76b65cf9ca64827aa5ace97beb5037fb9870ecb5

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/N/NeXLCore/Deps.toml
+++ b/N/NeXLCore/Deps.toml
@@ -25,3 +25,6 @@ Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
+["0.2.2-0"]
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
