--- a/N/NeXLCore/Compat.toml
+++ b/N/NeXLCore/Compat.toml
@@ -3,7 +3,6 @@ Colors = "0.12"
 PeriodicTable = "1"
 PhysicalConstants = "0.2.1-0.2"
 QuadGK = "2.4.0-2"
-Reexport = "0.2"
 Requires = "1"
 
 ["0-0.1"]
@@ -17,6 +16,9 @@ CSV = "0.7.3-0.7"
 DataFrames = "0.21"
 Unitful = "1.3.0-1"
 
+["0-0.2.1"]
+Reexport = "0.2"
+
 ["0.2-0"]
 BoteSalvatICX = "2"
 julia = "1.5.0-1"
@@ -26,6 +28,10 @@ FFAST = "2.0.1-2"
 FileIO = "1.3.0-1"
 NeXLUncertainties = "0.2"
 
+["0.2.1"]
+NeXLUncertainties = "0.2.1-0.2"
+Unitful = "1.5.0-1"
+
 ["0.2.1-0"]
 CSV = "0.7.3-0.8"
 CoordinateTransformations = "0.6"
@@ -34,6 +40,10 @@ Dierckx = "0.5"
 FFAST = "2"
 FileIO = "1.4.0-1"
 GeometryBasics = "0.3"
-NeXLUncertainties = "0.2.1-0.2"
 StaticArrays = ["0.12", "1"]
-Unitful = "1.5.0-1"
+
+["0.2.2-0"]
+LaTeXStrings = "1.2.0-1"
+NeXLUncertainties = "0.2.2-0.2"
+Reexport = "1"
+Unitful = "1.6.0-1"
