--- a/N/NeXLCore/Versions.toml
+++ b/N/NeXLCore/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "9f91188d9770e8389e2b956d12e46a8c5e5be044"
 
 ["0.2.1"]
 git-tree-sha1 = "48a9fc87d9469d2fdc5f4047df7bc36738494e50"
+
+["0.2.2"]
+git-tree-sha1 = "76b65cf9ca64827aa5ace97beb5037fb9870ecb5"
