New version: CitableTeiReaders v0.5.0
UUID: b4325aa9-906c-402e-9c3f-19ab8a88308e
Repo: https://github.com/HCMID/CitableTeiReaders.jl.git
Tree: 333cf1ca4d2e06337a980e96b78eebe46b3898b5

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CitableTeiReaders/Versions.toml
+++ b/C/CitableTeiReaders/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "e533934dab12022718ff312d8c291f0a7c12e3f4"
 
 ["0.4.3"]
 git-tree-sha1 = "ca77ff3536da3f9406aa3f38e16889164401bd29"
+
+["0.5.0"]
+git-tree-sha1 = "333cf1ca4d2e06337a980e96b78eebe46b3898b5"
