--- a/C/CitableTeiReaders/Compat.toml
+++ b/C/CitableTeiReaders/Compat.toml
@@ -13,5 +13,8 @@ CitableText = "0.3"
 ["0.2.1-0.4.2"]
 CitableText = "0.3-0.4"
 
-["0.4.3-0"]
+["0.4.3-0.4"]
 CitableText = "0.3-0.5"
+
+["0.5-0"]
+CitableText = "0.3-0.6"
