New version: Nabla v0.12.3
UUID: 49c96f43-aa6d-5a04-a506-44c7070ebe78
Repo: https://github.com/invenia/Nabla.jl.git
Tree: 2fe1b3d1f1ccac5763cc97230a0884632fb96e30

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/N/Nabla/Versions.toml
+++ b/N/Nabla/Versions.toml
@@ -63,3 +63,6 @@ git-tree-sha1 = "83d2a38342b7cd14e28439a16629fd57b425a080"
 
 ["0.12.2"]
 git-tree-sha1 = "0999de123327942b55740e384596ed33fbb03a33"
+
+["0.12.3"]
+git-tree-sha1 = "2fe1b3d1f1ccac5763cc97230a0884632fb96e30"
