--- a/N/Nabla/Compat.toml
+++ b/N/Nabla/Compat.toml
@@ -15,7 +15,7 @@ FDM = "0-0.2"
 ["0.11.1-0.11"]
 FDM = "0.0.0 - 0.6"
 
-["0.12-0"]
+["0.12-0.12.2"]
 DiffRules = "0.0"
 
 ["0.12.0"]
@@ -28,6 +28,9 @@ FDM = "0.6"
 DualNumbers = "0.6"
 SpecialFunctions = ["0.5-0.10", "1"]
 julia = "1.3.0-1"
+
+["0.12.3-0"]
+DiffRules = ["0.0", "1"]
 
 ["0.2-0.12.1"]
 DualNumbers = "0.6.0 - 0.6"
