New version: NCDataFrame v0.2.0
UUID: 419ca8c6-2b20-4634-9f6c-b2c5f1429aea
Repo: https://github.com/Axect/NCDataFrame.jl.git
Tree: 3373edb91509c5a44b5f364a58329c6e5ec70c3f

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/N/NCDataFrame/Deps.toml
+++ b/N/NCDataFrame/Deps.toml
@@ -1,3 +1,6 @@
 [0]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+
+["0.2-0"]
+Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
