--- a/N/NCDataFrame/Versions.toml
+++ b/N/NCDataFrame/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "975293a761ab7268f112ba2ee7c86225fc1de7bf"
+
+["0.2.0"]
+git-tree-sha1 = "3373edb91509c5a44b5f364a58329c6e5ec70c3f"
