New version: FFAST v2.0.3
UUID: 10506e09-08cd-5f0b-aee5-631de1bcc925
Repo: https://github.com/usnistgov/FFAST.jl.git
Tree: 04301384957d06f5979c26628dfe43dcc93f19bf

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/F/FFAST/Versions.toml
+++ b/F/FFAST/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "1a7e257d2d17016e43fbc7225d597704bb830041"
 
 ["2.0.2"]
 git-tree-sha1 = "88c52b00f226d60349a77e30e7c4a39cee1c4467"
+
+["2.0.3"]
+git-tree-sha1 = "04301384957d06f5979c26628dfe43dcc93f19bf"
