--- a/F/FFAST/Compat.toml
+++ b/F/FFAST/Compat.toml
@@ -1,10 +1,15 @@
 [1-2]
-CSV = ["0.7", "1"]
 Requires = "1"
 julia = "1"
 
 ["1-2.0.1"]
 DataFrames = "0.21"
 
+["1-2.0.2"]
+CSV = ["0.7", "1"]
+
 ["2.0.2-2"]
 DataFrames = "0.21-0.22"
+
+["2.0.3-2"]
+CSV = "0.7-0.8"
