New version: NeXLSpectrum v0.2.2
UUID: 6c578565-ca7f-4012-afc4-b8412d85af92
Repo: https://github.com/usnistgov/NeXLSpectrum.jl.git
Tree: ccb296868441785da489b3d50fc9be544bc4f8d6

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/N/NeXLSpectrum/Deps.toml
+++ b/N/NeXLSpectrum/Deps.toml
@@ -36,3 +36,8 @@ LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 
 ["0.2.1-0"]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+["0.2.2-0"]
+Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
+LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
