--- a/N/NeXLSpectrum/Versions.toml
+++ b/N/NeXLSpectrum/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "ae4621c8ec35430566c9ff79d03776880ffbe63d"
 
 ["0.2.1"]
 git-tree-sha1 = "e481e43249ff97d3555d0f422eb9942a9dda94ae"
+
+["0.2.2"]
+git-tree-sha1 = "ccb296868441785da489b3d50fc9be544bc4f8d6"
