--- a/N/NeXLSpectrum/Compat.toml
+++ b/N/NeXLSpectrum/Compat.toml
@@ -1,12 +1,8 @@
 [0]
-AxisArrays = "0.4.3-0.4"
 Colors = "0.12"
 DataAPI = "1.3.0-1"
 EzXML = "1.1.0-1"
-Interpolations = "0.12.10-0.12"
 OnlineStats = "1.5.0-1"
-Polynomials = "1.1.3-1"
-Reexport = "0.2"
 Requires = "1"
 
 ["0-0.1"]
@@ -25,6 +21,12 @@ Unitful = "1.3.0-1"
 ZipFile = "0.9.2-0.9"
 julia = "1.4.0-1"
 
+["0-0.2.1"]
+AxisArrays = "0.4.3-0.4"
+Interpolations = "0.12.10-0.12"
+Polynomials = "1.1.3-1"
+Reexport = "0.2"
+
 ["0.2.0"]
 Cairo = "1.0.3-1"
 Compose = "0.8.2-0.8"
@@ -34,6 +36,12 @@ NeXLCore = "0.2"
 NeXLMatrixCorrection = "0.2"
 NeXLUncertainties = "0.2"
 
+["0.2.1"]
+Images = "0.22.4-0.23"
+NeXLCore = "0.2.1-0.2"
+NeXLMatrixCorrection = "0.2.1-0.2"
+NeXLUncertainties = "0.2.1-0.2"
+
 ["0.2.1-0"]
 CSV = "0.7.3-0.8"
 Cairo = "1.0.5-1"
@@ -41,12 +49,20 @@ Compose = "0.8.2-0.9"
 DataFrames = "0.21-0.22"
 FileIO = "1.4.0-1"
 ImageIO = "0.4"
-Images = "0.22.4-0.23"
 LoopVectorization = "0.9"
 MultivariateStats = "0.8"
-NeXLCore = "0.2.1-0.2"
-NeXLMatrixCorrection = "0.2.1-0.2"
-NeXLUncertainties = "0.2.1-0.2"
 Unitful = "1.5.0-1"
 ZipFile = "0.9.3-0.9"
 julia = "1.5.0-1"
+
+["0.2.2-0"]
+AxisArrays = "0.4"
+Formatting = "0.4.2-0.4"
+Images = "0.23"
+Interpolations = "0.13"
+LsqFit = "0.12"
+NeXLCore = "0.2.3-0.2"
+NeXLMatrixCorrection = "0.2.3-0.2"
+NeXLUncertainties = "0.2.2-0.2"
+Polynomials = "1.1.0-1"
+Reexport = ["0.2", "1"]
