New version: JMcDM v0.1.5
UUID: 358108f5-d052-4d0a-8344-d5384e00c0e5
Repo: https://github.com/jbytecode/JMcDM.git
Tree: 4cc1c50085964ccf9c44f84775cc89253eefb9b9

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/J/JMcDM/Versions.toml
+++ b/J/JMcDM/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "f3c9b595b844fb14cade2f617647a230bbacee3d"
 
 ["0.1.4"]
 git-tree-sha1 = "acd16d0ba450062c4c1afb8e01281bd8279331b8"
+
+["0.1.5"]
+git-tree-sha1 = "4cc1c50085964ccf9c44f84775cc89253eefb9b9"
