--- a/J/JMcDM/Compat.toml
+++ b/J/JMcDM/Compat.toml
@@ -14,3 +14,6 @@ DataFrames = "0.22.5-0.22"
 ["0.1.2-0"]
 Cbc = "0.1.0-0.7.1"
 DataFrames = "0.22.0-0.22.5"
+
+["0.1.5-0"]
+StatsBase = "0.33.3-0.33"
