New version: Lathe v0.1.7
UUID: 38d8eb38-e7b1-11e9-0012-376b6c802672
Repo: https://github.com/emmettgb/Lathe.jl.git
Tree: 29febeb4d517b2defdcae7d02dbba9442d006feb

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/L/Lathe/Deps.toml
+++ b/L/Lathe/Deps.toml
@@ -7,3 +7,6 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 
 ["0.1.6-0"]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+["0.1.7-0"]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
