--- a/L/Lathe/Compat.toml
+++ b/L/Lathe/Compat.toml
@@ -22,5 +22,8 @@ Distributions = "0.24.1-0.24"
 ["0.1.5-0"]
 DataFrames = "0.22"
 
-["0.1.6-0"]
+["0.1.6"]
 julia = "1.5.2-1"
+
+["0.1.7-0"]
+julia = "1.2.0-1"
