--- a/L/Lathe/Versions.toml
+++ b/L/Lathe/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "8083415a5de3339c4a3a85af3ec74026aec440fc"
 
 ["0.1.6"]
 git-tree-sha1 = "9d4a163b3d20c012491b22ba39d5519b78352623"
+
+["0.1.7"]
+git-tree-sha1 = "29febeb4d517b2defdcae7d02dbba9442d006feb"
